--- a/src/CSS/carrusel.css
+++ b/src/CSS/carrusel.css
@@ -1,11 +1,11 @@
 .background-size-carousel{
   border-width: 2px;
-  border-style: solid;
-    border-color: #433558;
-  max-width: 40%;
-  max-height: 50%;
-  height: 40%;
-  width: 50%;
+  
+  border-radius: 2%;
+  width: 985px;
+  
+  margin: 0px 10px 10px 10px; /*top, right, bottom and left */
+  
 }
 
 
@@ -14,16 +14,14 @@
     border-style: solid;
       border-color: #433558;
     max-width: 100%;
-    max-height: 10%;
+    max-height: 100%;
     height: 100%;
     width: 100%;
+    border-radius: 2%;
 }
 
 .threeD {
- 
- 
- 
-  font-family: verdana;
+   font-family: verdana;
   font-size: 20px;
   font-weight: 700;
   color: white;
@@ -41,4 +39,22 @@
   1px 22px 10px rgba(16,16,16,0.2),
   1px 25px 35px rgba(16,16,16,0.2),
   1px 30px 60px rgba(16,16,16,0.4);
+}
+@media only screen and (max-width:1250px){
+  
+}
+@media only screen and (max-width:1150px){
+
+}
+@media only screen and (max-width:1050px){
+
+}
+@media only screen and (max-width:1050px){
+
+}
+@media only screen and (max-width:800px){
+
+}
+@media only screen and (max-width:700px){
+
 }
