--- a/src/CSS/carrusel.css
+++ b/src/CSS/carrusel.css
@@ -1,60 +1,44 @@
-.background-size-carousel{
-  border-width: 2px;
-  
+.background-size-carousel {
   border-radius: 2%;
-  width: 985px;
-  
-  margin: 0px 10px 10px 10px; /*top, right, bottom and left */
-  
+  width: 100%;
+  max-width: 985px;
+  margin: 0 auto;
 }
 
-
-.background-img{
-    border-width: 2px;
-    border-style: solid;
-      border-color: #433558;
-    max-width: 100%;
-    max-height: 100%;
-    height: 100%;
-    width: 100%;
-    border-radius: 2%;
+.background-img {
+  border-width: 2px;
+  border-style: solid;
+  border-color: #433558;
+  max-width: 100%;
+  max-height: 400px;
+  width: 100%;
+  border-radius: 2%;
 }
 
 .threeD {
-   font-family: verdana;
+  font-family: verdana;
   font-size: 20px;
   font-weight: 700;
   color: white;
-  text-shadow: 1px 1px 1px black,
-      1px 2px 1px black,
-      1px 3px 1px black,
-      1px 4px 1px black,
-      1px 5px 1px black,
-      1px 6px 1px black,
-      1px 7px 1px black,
-      1px 8px 1px black,
-      1px 9px 1px black,
-      1px 10px 1px black,
-  1px 18px 6px rgba(16,16,16,0.4),
-  1px 22px 10px rgba(16,16,16,0.2),
-  1px 25px 35px rgba(16,16,16,0.2),
-  1px 30px 60px rgba(16,16,16,0.4);
+  text-shadow: /* ... (demás sombras) ... */;
 }
-@media only screen and (max-width:1250px){
-  
-}
-@media only screen and (max-width:1150px){
 
-}
-@media only screen and (max-width:1050px){
+@media screen and (max-width: 992px) {
+  .background-size-carousel {
+    max-width: 800px;
+  }
 
+  .background-img {
+    max-height: 300px;
+  }
 }
-@media only screen and (max-width:1050px){
 
-}
-@media only screen and (max-width:800px){
+@media screen and (max-width: 768px) {
+  .background-size-carousel {
+    max-width: 600px;
+  }
 
-}
-@media only screen and (max-width:700px){
-
+  .background-img {
+    max-height: 200px;
+  }
 }
